hedgewars/LuaPas.pas


(*
** miscellaneous functions
*)
function lua_error(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function lua_next(L : Plua_State; idx : LongInt) : LongInt;
    cdecl; external LuaLibName;

procedure lua_concat(L : Plua_State; n : LongInt);
    cdecl; external LuaLibName;

function  lua_getallocf(L : Plua_State; ud : PPointer) : lua_Alloc;
    cdecl; external LuaLibName;

procedure lua_setallocf(L : Plua_State; f : lua_Alloc; ud : Pointer);
    cdecl; external LuaLibName;

(*
** ===============================================================
** some useful macros
** ===============================================================
*)
procedure lua_pop(L : Plua_State; n : LongInt);

procedure lua_newtable(L : Plua_State);

procedure lua_register(L : Plua_State; n : PChar; f : lua_CFunction);

procedure lua_pushcfunction(L : Plua_State; f : lua_CFunction);

function  lua_strlen(L : Plua_State; idx : LongInt) : LongInt;

function lua_isfunction(L : Plua_State; n : LongInt) : Boolean;
function lua_istable(L : Plua_State; n : LongInt) : Boolean;
function lua_islightuserdata(L : Plua_State; n : LongInt) : Boolean;
function lua_isnil(L : Plua_State; n : LongInt) : Boolean;
function lua_isboolean(L : Plua_State; n : LongInt) : Boolean;
function lua_isthread(L : Plua_State; n : LongInt) : Boolean;
function lua_isnone(L : Plua_State; n : LongInt) : Boolean;
function lua_isnoneornil(L : Plua_State; n : LongInt) : Boolean;

procedure lua_pushliteral(L : Plua_State; s : PChar);

procedure lua_setglobal(L : Plua_State; s : PChar);
procedure lua_getglobal(L : Plua_State; s : PChar);

function lua_tostring(L : Plua_State; idx : LongInt) : shortstring;
function lua_tostringA(L : Plua_State; idx : LongInt) : ansistring;


(*
** compatibility macros and functions
*)
function lua_open : Plua_State;

procedure lua_getregistry(L : Plua_State);

function lua_getgccount(L : Plua_State) : LongInt;

type
    lua_Chuckreader = lua_Reader;
    lua_Chuckwriter = lua_Writer;

(* ====================================================================== *)

(*
** {======================================================================
** Debug API
** =======================================================================
*)

(*
** Event codes
*)
const
    LUA_HOOKCALL    = 0;
    LUA_HOOKRET     = 1;
    LUA_HOOKLINE    = 2;
    LUA_HOOKCOUNT   = 3;
    LUA_HOOKTAILRET = 4;


(*
** Event masks
*)
    LUA_MASKCALL  = 1 shl LUA_HOOKCALL;
    LUA_MASKRET   = 1 shl LUA_HOOKRET;
    LUA_MASKLINE  = 1 shl LUA_HOOKLINE;
    LUA_MASKCOUNT = 1 shl LUA_HOOKCOUNT;

type
    lua_Debug = packed record
    event : LUA_INTEGER_;
    name : PChar;               (* (n) *)
    namewhat : PChar;           (* (n) `global', `local', `field', `method' *)
    what : PChar;               (* (S) `Lua', `C', `main', `tail' *)
    source : PChar;             (* (S) *)
    currentline : LUA_INTEGER_; (* (l) *)
    nups : LUA_INTEGER_;        (* (u) number of upvalues *)
    linedefined : LUA_INTEGER_; (* (S) *)
    short_src : array [0..LUA_IDSIZE-1] of Char; (* (S) *)
    (* private part *)
    i_ci : LUA_INTEGER_;        (* active function *)
    end;
    Plua_Debug = ^lua_Debug;

  (* Functions to be called by the debuger in specific events *)
  lua_Hook = procedure (L : Plua_State; ar : Plua_Debug); cdecl;


function lua_getstack(L : Plua_State; level : LongInt; ar : Plua_Debug) : LongInt;
    cdecl; external LuaLibName;

function lua_getinfo(L : Plua_State; const what : PChar; ar: Plua_Debug): LongInt;
    cdecl; external LuaLibName;

function lua_getlocal(L : Plua_State; ar : Plua_Debug; n : LongInt) : PChar;
    cdecl; external LuaLibName;

function lua_setlocal(L : Plua_State; ar : Plua_Debug; n : LongInt) : PChar;
    cdecl; external LuaLibName;

function lua_getupvalue(L : Plua_State; funcindex, n : LongInt) : PChar;
    cdecl; external LuaLibName;

function lua_setupvalue(L : Plua_State; funcindex, n : LongInt) : PChar;
    cdecl; external LuaLibName;

function lua_sethook(L : Plua_State; func : lua_Hook; mask, count: LongInt): LongInt;
    cdecl; external LuaLibName;

{$IFDEF LUA_GETHOOK}
function lua_gethook(L : Plua_State) : lua_Hook;
    cdecl; external LuaLibName;
{$ENDIF}

function lua_gethookmask(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function lua_gethookcount(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;


(*****************************************************************************)
(*                                  lualib.h                                 *)
(*****************************************************************************)

(*
** $Id: lualib.h,v 1.36 2005/12/27 17:12:00 roberto Exp $
** Lua standard libraries
** See Copyright Notice at the end of this file
*)

const
    (* Key to file-handle type *)
    LUA_FILEHANDLE  = 'FILE*';

    LUA_COLIBNAME   = 'coroutine';
    LUA_TABLIBNAME  = 'table';
    LUA_IOLIBNAME   = 'io';
    LUA_OSLIBNAME   = 'os';
    LUA_STRLIBNAME  = 'string';
    LUA_MATHLIBNAME = 'math';
    LUA_DBLIBNAME   = 'debug';
    LUA_LOADLIBNAME = 'package';

function luaopen_base(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_table(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_io(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_os(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_string(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_math(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_debug(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

function luaopen_package(L : Plua_State) : LongInt;
    cdecl; external LuaLibName;

procedure luaL_openlibs(L : Plua_State);
    cdecl; external LuaLibName;

procedure lua_assert(x : Boolean);    // a macro


(*****************************************************************************)
(*                                  lauxlib.h                                *)
(*****************************************************************************)

(*
** $Id: lauxlib.h,v 1.87 2005/12/29 15:32:11 roberto Exp $
** Auxiliary functions for building Lua libraries
** See Copyright Notice at the end of this file.
*)

// not compatibility with the behavior of setn/getn in Lua 5.0
function  luaL_getn(L : Plua_State; idx : LongInt) : LongInt;
procedure luaL_setn(L : Plua_State; i, j : LongInt);

const
    LUA_ERRFILE = LUA_ERRERR + 1;

type
    luaL_Reg = packed record
    name : PChar;
    func : lua_CFunction;
    end;
    PluaL_Reg = ^luaL_Reg;


procedure luaL_openlib(L : Plua_State; const libname : PChar; const lr : PluaL_Reg; nup : LongInt);
    cdecl; external LuaLibName;
procedure luaL_register(L : Plua_State; const libname : PChar; const lr : PluaL_Reg);
    cdecl; external LuaLibName;
function luaL_getmetafield(L : Plua_State; obj : LongInt; const e : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_callmeta(L : Plua_State; obj : LongInt; const e : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_typerror(L : Plua_State; narg : LongInt; const tname : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_argerror(L : Plua_State; numarg : LongInt; const extramsg : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_checklstring(L : Plua_State; numArg : LongInt; ls : Psize_t) : PChar;
    cdecl; external LuaLibName;
function luaL_optlstring(L : Plua_State; numArg : LongInt; const def: PChar; ls: Psize_t) : PChar;
    cdecl; external LuaLibName;
function luaL_checknumber(L : Plua_State; numArg : LongInt) : lua_Number;
    cdecl; external LuaLibName;
function luaL_optnumber(L : Plua_State; nArg : LongInt; def : lua_Number) : lua_Number;
    cdecl; external LuaLibName;

function luaL_checkinteger(L : Plua_State; numArg : LongInt) : lua_Integer;
    cdecl; external LuaLibName;
function luaL_optinteger(L : Plua_State; nArg : LongInt; def : lua_Integer) : lua_Integer;
    cdecl; external LuaLibName;

procedure luaL_checkstack(L : Plua_State; sz : LongInt; const msg : PChar);
    cdecl; external LuaLibName;
procedure luaL_checktype(L : Plua_State; narg, t : LongInt);
    cdecl; external LuaLibName;
procedure luaL_checkany(L : Plua_State; narg : LongInt);
    cdecl; external LuaLibName;

function luaL_newmetatable(L : Plua_State; const tname : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_checkudata(L : Plua_State; ud : LongInt; const tname : PChar) : Pointer;
    cdecl; external LuaLibName;

procedure luaL_where(L : Plua_State; lvl : LongInt);
    cdecl; external LuaLibName;
function  luaL_error(L : Plua_State; const fmt : PChar) : LongInt; varargs;
    cdecl; external LuaLibName;

function luaL_checkoption(L : Plua_State; narg : LongInt; const def : PChar; const lst : array of PChar) : LongInt;
    cdecl; external LuaLibName;

function  luaL_ref(L : Plua_State; t : LongInt) : LongInt;
    cdecl; external LuaLibName;
procedure luaL_unref(L : Plua_State; t, ref : LongInt);
    cdecl; external LuaLibName;

function luaL_loadfile(L : Plua_State; const filename : PChar) : LongInt;
    cdecl; external LuaLibName;
function luaL_loadbuffer(L : Plua_State; const buff : PChar; sz : size_t; const name: PChar) : LongInt;
    cdecl; external LuaLibName;

function luaL_loadstring(L : Plua_State; const s : Pchar) : LongInt;
    cdecl; external LuaLibName;

function luaL_newstate : Plua_State;
    cdecl; external LuaLibName;

function luaL_gsub(L : Plua_State; const s, p, r : PChar) : PChar;
    cdecl; external LuaLibName;

function luaL_findtable(L : Plua_State; idx : LongInt; const fname : PChar; szhint : LongInt) : PChar;
    cdecl; external LuaLibName;


(*
** ===============================================================
** some useful macros
** ===============================================================
*)

function luaL_argcheck(L : Plua_State; cond : Boolean; numarg : LongInt; extramsg : PChar): LongInt;
function luaL_checkstring(L : Plua_State; n : LongInt) : PChar;
function luaL_optstring(L : Plua_State; n : LongInt; d : PChar) : PChar;
function luaL_checkint(L : Plua_State; n : LongInt) : lua_Integer;
function luaL_optint(L : Plua_State; n : LongInt; d : lua_Integer): lua_Integer;
function luaL_checklong(L : Plua_State; n : LongInt) : lua_Integer;
function luaL_optlong(L : Plua_State; n : LongInt; d : lua_Integer) : lua_Integer;

function luaL_typename(L : Plua_State; idx : LongInt) : PChar;

function luaL_dofile(L : Plua_State; fn : PChar) : LongInt;

function luaL_dostring(L : Plua_State; s : PChar) : LongInt;

procedure luaL_getmetatable(L : Plua_State; n : PChar);

(* not implemented yet
#define luaL_opt(L,f,n,d) (lua_isnoneornil(L,(n)) ? (d) : f(L,(n)))
*)

(*
** {======================================================
** Generic Buffer manipulation
** =======================================================
*)

type
    luaL_Buffer = packed record
    p : PChar;       (* current position in buffer *)
    lvl : LongInt;   (* number of strings in the stack (level) *)
    L : Plua_State;
    buffer : array [0..LUAL_BUFFERSIZE-1] of Char;
    end;
    PluaL_Buffer = ^luaL_Buffer;

procedure luaL_addchar(B : PluaL_Buffer; c : Char);

(* compatibility only *)
procedure luaL_putchar(B : PluaL_Buffer; c : Char);

procedure luaL_addsize(B : PluaL_Buffer; n : LongInt);

procedure luaL_buffinit(L : Plua_State; B : PluaL_Buffer);
    cdecl; external LuaLibName;
function  luaL_prepbuffer(B : PluaL_Buffer) : PChar;
    cdecl; external LuaLibName;
procedure luaL_addlstring(B : PluaL_Buffer; const s : PChar; ls : size_t);
    cdecl; external LuaLibName;
procedure luaL_addstring(B : PluaL_Buffer; const s : PChar);
    cdecl; external LuaLibName;
procedure luaL_addvalue(B : PluaL_Buffer);
    cdecl; external LuaLibName;
procedure luaL_pushresult(B : PluaL_Buffer);
    cdecl; external LuaLibName;

(* ====================================================== *)

